# bluetoother

./: .gitignore  .travis.yml  AUTHORS  CHANGES  CMakeLists.txt  INSTALL  LICENSE.3rdparty  README.md  bluetoother-defs.cmake
data/applications/: bluetoother.desktop  com.efanomars.bluetoother.desktop
data/polkit-1/: com.efanomars.bluetoother.policy.in  com.github.efanomars.bluetoother.policy.in
scripts/: arch_create.py  checktidy.py  compileall.py  debian_create.py  install_bluetoother.py  sourcepackage.py  uninstall_bluetoother.py
scripts/priv/: checktidy.py  dd_install_bluetoother.py  debian_src_versions.cmake  pk_install_bluetoother.py
scripts/priv/arch.orig/: PKGBUILD.in
scripts/priv/debian.orig/: bluetoother.1  bluetoother.install  bluetoother.lintian-overrides  bluetoother.manpages  changelog.in  control.in  copyright  rules
src/: btservice.cc  btservice.h  config.cc.in  hciadapter.cc  hciadapter.h  hcisocket.cc  hcisocket.h  jsoncommon.cc  jsoncommon.h  main.cc  namedialog.cc  namedialog.h  tootherserver.cc  tootherserver.h  toothersources.cc  toothersources.h  tootherwindow.cc  tootherwindow.h
